# soccer-recon

./: .gitignore  README.md  pyproject.toml
docs/: TRAINING.md  metrics.md  remote_training.md  training.md
scripts/: README.md  __init__.py  check_data_availability.py  eval.py  test_metrics.py  train.py
soccer_recon/data/: README.md  __init__.py  dataloader.py  datamanager.py  dataparsers.py  download_match.py  extract_frames.py  visualize.py
soccer_recon/methods/: __init__.py  base_gs_method.py
soccer_recon/metrics/: __init__.py  base.py  evaluator.py  lpips.py  psnr.py  ssim.py
soccer_recon/models/: __init__.py  base_gs_model.py
