[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soccer-recon"
version = "0.1.0"
description = "3D Reconstruction of soccer matches from multiview camera using Gaussian Splatting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nerfstudio>=1.0.0",
    "wandb>=0.15.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "SoccerNet"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
soccer-train = "scripts.train:entrypoint"

# Nerfstudio plugin registration
[project.entry-points."nerfstudio.method_configs"]
soccer-gs = "soccer_recon.methods.base_gs_method:SoccerGSConfig"

[tool.hatch.build.targets.wheel]
packages = ["soccer_recon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
