[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soccer-recon"
version = "0.1.0"
description = "3D Reconstruction of soccer matches from multiview camera using Gaussian Splatting"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "nerfstudio>=1.0.0",
    "wandb>=0.15.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "SoccerNet",
    # Evaluation metrics
    "lpips>=0.1.4",           # LPIPS (Learned Perceptual Image Patch Similarity)
    "scikit-image>=0.21.0",   # SSIM and other image metrics
    "torchmetrics>=1.0.0",    # PSNR, SSIM, and comprehensive metrics
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
soccer-train = "scripts.train:entrypoint"

# Nerfstudio plugin registration
[project.entry-points."nerfstudio.method_configs"]
soccer-gs = "soccer_recon.methods.base_gs_method:SoccerGSConfig"

[tool.hatch.build.targets.wheel]
packages = ["soccer_recon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
